.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/deterministicKeys_custom.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/test.ts(11,47): error TS377049: This key does not match the deterministic key for this declaration. The expected key is `@effect/test-app/test/MyClass`. effect(deterministicKeys)
/.src/test.ts(17,6): error TS377049: This key does not match the deterministic key for this declaration. The expected key is `@effect/test-app/test/TTLRequest`. effect(deterministicKeys)


==== /.src/tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "plugins": [
          {
            "name": "@effect/language-service",
            "extendedKeyDetection": true
          }
        ]
      }
    }
    

==== /.src/package.json (0 errors) ====
    { "name": "@effect/test-app", "version": "1.0.0" }
    

==== /.src/utils.ts (0 errors) ====
    // @effect-v3
    import * as Context from "effect/Context"
    
    export function MyConstructor(/** @effect-identifier */ identifier: string) {
      return Context.Tag("hey/" + identifier)
    }
    
    export const Class = <
      Config extends {
        payload: Record<string, unknown>
      } = { payload: {} }
    >() =>
    <const Tag extends string>(/** @effect-identifier */ tag: Tag, _options: {
      readonly primaryKey: (payload: Config["payload"]) => string
    }): new(
      args: Config["payload"]
    ) =>
      & { readonly _tag: Tag }
      & { readonly [K in keyof Config["payload"]]: Config["payload"][K] } =>
    {
      function Persistable(this: any, props: any) {
        this._tag = tag
        if (props) {
          Object.assign(this, props)
        }
      }
      return Persistable as any
    }
    

==== /.src/test.ts (2 errors) ====
    // @effect-v3
    // @effect-diagnostics deterministicKeys:error
    import * as Persistable from "./utils"
    import * as Context from "effect/Context"
    
    // simple case inside same file
    export function LocalConstructor(/** @effect-identifier */ identifier: string) {
      return Context.Tag("hey/" + identifier)
    }
    
    export class MyClass extends LocalConstructor("Hello")<MyClass, {}>() {
                                                  ~~~~~~~
!!! error TS377049: This key does not match the deterministic key for this declaration. The expected key is `@effect/test-app/test/MyClass`. effect(deterministicKeys)
    }
    
    // referenced on another file
    export class TTLRequest extends Persistable.Class<{
      payload: { id: number }
    }>()("TTLRequest", {
         ~~~~~~~~~~~~
!!! error TS377049: This key does not match the deterministic key for this declaration. The expected key is `@effect/test-app/test/TTLRequest`. effect(deterministicKeys)
      primaryKey: (req) => `TTLRequest:${req.id}`
    }) {}
    
